bug 226380. backout code that breaks ActiveX plugin properties, a=chofmann